# pithy

./: .gitignore  .prettierignore  build.sh  claude.md  craft.eon  craft.toml  develop.sh  gen-data.py  gen-grammar.py  install-vscode-ext.sh  install-vscode.sh  install.sh  iotest.py  justfile  legs.py  legs_base.py  license-iotest.txt  makefile  mypy.ini  pyproject-common.toml  pyrightconfig.json  readme.md  readme.txt  readme.wu  setup-common.cfg  setup.cfg  setup.py  setup_utils.py  tsconfig.json  upload.sh  utest.py
.zed/: settings.json
craft/: __init__.py  docs.py  mac_app.py  py_check.py  setup.cfg  swift.py  swift_utest.py  web.py
crafts/: __about__.py  __init__.py  project.toml  readme.md  setup.cfg
doc/: index.html.wu  regex-generation-problems.txt  style.md  utest.html.wu
doc/same/: readme.md
doc/writeup/: index.html.wu  writeup-help.txt.sh
docs/: index.html
grammars/: ascii.legs  legs.legs  unicode.legs
iotest/: __main__.py  case.py  ctx.py  main.py  pithy  project.toml  readme.md  setup.cfg
legs/: __about__.py  __init__.py  __main__.py  automata.py  build.py  categories.py  charsets.py  codepoints.py  data_09_00.py  defs.py  dfa.py  dot.py  legs_base.swift  nfa.py  parse.py  patterns.py  project.toml  python.py  readme.md  readme.wu  rules.py  setup.cfg  swift.py  unico.py  vscode.py
legs/unicode/: categories.py  charsets.py  codepoints.py  data_11_00.py
node/: pdf-extract.js
pat/: __init__.py  __main__.py  pat0.py
perf/: main.py  main.swift  makefile  run.py
perf/legs/: main.py  main.swift  makefile  run.py
perf/pithy/: err_progress.py
perf/sqlite/: column-order-exp.py  insertion-tests.py  time-series-avg.py
pithy/: __about__.py  __init__.py  alarm.py  ansi.py  archive.py  argparse.py  ast.py  buffer.py  clock.py  clonefile.py  collection.py  collection_utils.py  csv.py  csv_utils.py  date.py  date_utils.py  default.py  defaultlist.py  desc.py  dict.py  dict_utils.py  dicts.py  digest.py  dispatch.py  encode.py  encodings.py  env.py  eon.py  exceptions.py  fetch.py  filenamefmt.py  filestatus.py  format.py  fs.py  garble.py  generator.py  graph.py  graph_utils.py  graphviz.py  histogram.py  (+74 more)
pithy/aws/: s3.py
pithy/charts/: text.py
pithy/crypto/: __init__.py
pithy/dataclasses/: __init__.py  backport.pyi
pithy/diff/: __init__.py  patience.py  util.py
pithy/eon2/: __init__.py  __main__.py  convert.py  eq.eon  lex.py  no-eq.eon  notes.md  parse.py  parse_custom.py  syntax.py  tests.eon  x.eon
pithy/github/: issues.py
pithy/html/: __init__.py  dom.py  loader.py  parse.py  parts.py  readme.md  semantics.py  tree.py
pithy/html/charts/: __init__.py  __main__.py  _webtest.py  charts.css  charts.js  ticks.ut.py
pithy/http/: __init__.py  server.py
pithy/http/server/: __init__.py  __main__.py
pithy/os/: homebrew.py
pithy/parse/: __init__.py
pithy/parse/test/: append_or_list.ut.py  arithmetic.ut.py  ordered_choice.ut.py  precedence.ut.py  py_imports.ut.py  sep.ut.py  skeletonize.py  skeletonize.ut.py
pithy/py/: __init__.py  lex.py
pithy/sqlite/: __init__.py  conn.py  cursor.py  keywords.py  migration.py  parse.py  pool.py  row.py  schema.py  util.py
pithy/sqlite/test/parse/: entity.ut.py  expr.ut.py  schemas.ut.py
pithy/svg/: __init__.py  loader.py
pithy/swift/: demangle.py
pithy/syntax/: __init__.py  python.py  rst.py
pithy/tsv/: escapes.ut.py
pithy/unicode/: __init__.py  categories.py  charsets.py  codepoints.py  control_pictures.py  data_09_00.py  data_10_00.py  data_11_00.py
pithy/vec/: __init__.py  line.py  tangent.py
pithy/vscode/: when.py  when.ut.py
pithy/web/: __init__.py  app.py  browser.py  echoapp.py  env.py  events.py  htmx.py  nonce.py  starlette.py
pithy/web/asgi/: select.py  vis.py
pithy/web/asgi/squelch/: __init__.py
pithy/web/squelch/: __init__.py
pithy/web/static/: charts.css  charts.js  htmx.esm.js  htmx.js  htmx.min.js  htmx.urls  pithy.css  pithy.js
pithy/xcproj/: parse.py  pbx.py  render.py  util.py
pithy/xml/: __init__.py  datatypes.py  escape.py  generic.py  selector.py  tree.py  xmldict.py
pithytools/: __about__.py  json_fmt.py  project.toml  readme.md  setup.cfg
pithytools/deps_audit/: brew.py  pip.py
pkg/: crafts.toml  iotest.toml  legs.toml  pithy.toml  pithytools.toml  tolkien.toml  utest.toml  wu.toml
pkg/crafts/: crafts
pkg/iotest/: iotest
pkg/legs/: legs
pkg/pithy/: pithy
pkg/pithytools/: pithytools
pkg/tolkien/: tolkien
pkg/utest/: utest
pkg/wu/: wu
plumage/: build_mac_app.py  mypy.py  swift.py  tsc.py
server/build-scripts/: build-python.sh
sh/: build.sh  develop.sh  install.sh  is-synced.sh  setup.sh  upload.sh
test/: _default.iot  a-b.pat  a-z.pat  aaa-aab.pat  aaaa-aaaaa.pat  aaaa-aaaab.pat  aaaa-baaa.pat  aaaab.txt  abc-abcd.pat  abc-bcd.pat  abcd-abcde.pat  abcd-acbd.pat  ambiguous-patterns.err  ambiguous.iot  ambiguous.legs  archive.py  b-a.pat  baaa.txt  backtrack-a_star_b.iot  backtrack-a_star_b.legs  backtrack.iot  backtrack.legs  backtrack.out  basic-match.iot  basic-match.out  basic-swift.iot  basic-swift.out  basic.legs  buffer.py  compare-mode-contain.iot  compile.iot  compile.py  csv_utils.out  csv_utils.py  dataclasses_.py  date.py  default.iot  defaultlist.py  dict_utils.py  dicts.py  (+55 more)
test-diff/: collect-diff-examples.py  test.py
test-meta/: compare-contain-fail.iot  compare-match-empty-out.iot  compile-fail.iot  fail-dbg.iot  meta-coverage.sh  missing-file-act.iot  skip.iot
test-meta/1/: broken.iot  cmd-installed-nonexistent.iot  (+12 more)
tolkien/: __about__.py  __init__.py  project.toml  setup.cfg
tools/: gen-aws.py  gen-charset-grammar.py  gen-data.py  gen-sqlite-test-sql.py  parse-sqlite-lemon-grammar.py  py-token-stats.py
typestubs/: apsw.pyi  blake3.pyi  html5_parser.pyi
utest/: __init__.py  __main__.py  project.toml  setup.cfg
vscode/: package.json
vscode-craft/: package.json
vscode-ext/: install-vscode-ext.sh  package.json
writeup/: __init__.py  setup.cfg  writeup.js  writeup.legs
wu/: __init__.py  lex.py  parse.py  project.toml  readme.md  setup.cfg  writeup.css
wu/v1/: render.py
(+507 files in other folders)
