# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = pithy
version = 0.0.4
license = CC0
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/pithy
description = Pithy is a collection of utilities for scripting in Python 3.
keywords =
  build
  build system
  diff
  documentation
  git
  git diff
  git diff highlight
  markdown
  markup
  mypy
  pat
  patch
  scripting
  swift
  test
  testing
  typescript
  unit test
  unit testing
  utest
  utilities
  writeup

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3 :: Only
  Topic :: Documentation
  Topic :: Education
  Topic :: Internet
  Topic :: Multimedia
  Topic :: Scientific/Engineering
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Documentation
  Topic :: Software Development :: Testing
  Topic :: Text Processing
  Topic :: Text Processing :: Markup
  Topic :: Text Processing :: Markup :: HTML
  Topic :: Utilities

[build]
build-base = _build

[sdist]
dist-dir = _build

[mypy]
python_version = 3.7
cache_dir = _build/mypy_cache

check_untyped_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = False
ignore_missing_imports = False
show_column_numbers = True
show_none_errors = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
