# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = legs
version = 0.0.1
license = CC0
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/legs
description = A lexer generator.

keywords =
  lexer
  lexing
  token
  tokenize
  regular expression
  unicode

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3 :: Only


[build]
build-base = _build

[sdist]
dist-dir = _build

[mypy]
python_version = 3.7
cache_dir = _build/mypy_cache

check_untyped_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = False
show_column_numbers = True
show_none_errors = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True
