# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = craft-tool
version = 0.0.5
description = Craft is a set of custom build tools.

keywords =
  build tool

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3
  Topic :: Documentation
  Topic :: Education
  Topic :: Internet
  Topic :: Multimedia
  Topic :: Scientific/Engineering
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Code Generators
  Topic :: Software Development :: Documentation
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Pre-processors
  Topic :: Software Development :: Testing
  Topic :: Software Development :: User Interfaces
  Topic :: Software Development :: Version Control
  Topic :: Software Development :: Version Control :: Git
  Topic :: System
  Topic :: Utilities
  Typing :: Typed


[build]
build-base = _build

[bdist]
dist-dir = _build/dist

[sdist]
dist-dir = _build/dist
