# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = pithy
version = 0.0.7
description = Pithy is a collection of utilities for scripting in Python 3.

keywords =
  ansi
  apfs
  buffer
  chart
  clone
  console
  crawl
  csv
  diff
  format
  graph
  graphviz
  html
  iterable
  json
  lex
  lexer
  lexing
  msgpack
  parse
  parser
  parsing
  scrape
  sqlite
  svg
  syntax
  test
  testing
  term
  terminal
  token
  tokenization
  tokenizer
  types
  typing
  unicode
  unit
  utilities
  xml
  zst
  zstandard

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3
  Topic :: Documentation
  Topic :: Education
  Topic :: Internet
  Topic :: Multimedia
  Topic :: Office/Business
  Topic :: Scientific/Engineering
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Code Generators
  Topic :: Software Development :: Documentation
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Pre-processors
  Topic :: Software Development :: Testing
  Topic :: Software Development :: User Interfaces
  Topic :: Software Development :: Version Control
  Topic :: Software Development :: Version Control :: Git
  Topic :: System
  Topic :: Text Processing
  Topic :: Text Processing :: Filters
  Topic :: Text Processing :: General
  Topic :: Text Processing :: Markup
  Topic :: Text Processing :: Markup :: HTML
  Topic :: Utilities
  Typing :: Typed
