# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = tolkien
version = 0.0.2
description = Token class for lexers and parsers.

keywords =
  generator
  grammar
  lex
  lexer
  lexing
  regex
  regular expression
  token
  tokenization
  tokenize
  tokenizer
  tokenizing
  unicode

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Code Generators
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Pre-processors
  Topic :: System
  Topic :: Text Processing
  Topic :: Utilities
  Typing :: Typed
