# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = utest
version = 0.0.5
description = UTest is a simple unit-testing library.

package_data = { 'utest': ['py.typed'] }

keywords =
  unit
  test
  testing

classifiers =
  # See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Testing
  Typing :: Typed
